Updated app.py and home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -179,7 +179,12 @@
 
 
 
-    <div style="margin: 40px;padding: 20px;font-size: 1.3em;background-color: #e38dbe">
+  <div style="margin: 40px;padding: 20px;font-size: 2.9em; color:#ff0090; font-family: 'Balsamiq Sans'; background-color: #e38dbe">Enter values and check the Tumor Type : </div>
+
+
+
+
+    <!-- <div style="margin: 40px;padding: 20px;font-size: 1.3em;background-color: #e38dbe">
 
       <ul class="nav nav-tabs" style="background-color: #e38dbe">
         <li class="active"><a data-toggle="tab" href="#home" style="font-family: 'Balsamiq Sans', cursive;">What is Breast Cancer</a></li>
@@ -209,7 +214,7 @@
           </p>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <div style="background-color:#b472c9; padding: 20px; margin: 40px">
